feature: eddits remarks

--- a/src/account-reviews.html
+++ b/src/account-reviews.html
@@ -7,15 +7,15 @@
 
       <div class="uk-width-expand@l">
         <h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
-        <ul class="account__list uk-flex uk-flex-between@l">
+        <ul class="account__list uk-flex">
           <li>
             <a href="account-main.html">Главная</a>
           </li>
-          <li>
+          <!-- <li>
             <a href="account-cart.html">Мои товары</a>
-          </li>
+          </li> -->
           <li>
-            <a href="account-orders.html">Заказы</a>
+            <a href="account-orders.html">Мои заказы</a>
           </li>
           <li>
             <a href="account-cashback.html">Кешбэк</a>
@@ -23,20 +23,20 @@
           <li class="active">
             <a href="">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
           </li>
-          <li class="uk-visible@l">
+          <!--  <li class="uk-visible@l">
             <a class="account__logout" href="#">Выйти
               <svg width="20" height="20" fill="#FF548C">
                 <use xlink:href="img/symbol/sprite.svg#log-out" />
               </svg>
             </a>
-          </li>
+          </li> -->
         </ul>
 
         <div class="account__content">
           <div class="account__container">
             <span class="account__container-title uk-margin-bottom">Задать вопрос</span>
             <div class="uk-flex uk-flex-column@s">
-              <div class="uk-flex uk-flex-column uk-width-1-3@l uk-margin-right@l uk-margin-bottom@s">
+              <!-- <div class="uk-flex uk-flex-column uk-width-1-3@l uk-margin-right@l uk-margin-bottom@s">
                 <div class="field field--account uk-margin-bottom">
                   <label for="" class="field__title">Тема вопроса</label>
                   <input type="text">
@@ -45,17 +45,17 @@
                   <label for="" class="field__title">Емейл для ответа</label>
                   <input type="email">
                 </div>
-              </div>
+              </div> -->
               <div class="field field--account uk-width-expand@l">
-                <label for="" class="field__title">Детально опишите свой вопрос</label>
+                <label for="" class="field__title">Опишите свой вопрос</label>
                 <textarea rows="150"></textarea>
               </div>
             </div>
-            <button class="btn">Заказать звонок</button>
+            <button class="btn">Отправить сообщение</button>
           </div>
 
           <div class="account__container">
-            <span class="account__container-title uk-margin-bottom">Ваши отзывы</span>
+            <span class="account__container-title uk-margin-bottom">Ваши вопросы</span>
             <ul class="uk-flex uk-flex-column uk-margin-bottom">
               <li class="review uk-flex uk-flex-column uk-margin-bottom">
                 <img class="uk-margin-right" src="img/pic/ico/avatar-ico.svg" width="60" height="60" alt="">
