--- a/src/catalog.html
+++ b/src/catalog.html
@@ -82,7 +82,8 @@
   <div class="uk-container bg-full-width uk-padding-top@l uk-padding-large-bottom@l uk-padding-large-bottom@s">
     <div class="catalog__content uk-flex uk-flex-column@s">
       <div class="uk-width-1-4@l uk-visible@l uk-margin-right@l">
-        <button class="catalog__btn uk-margin-bottom uk-visible@l" type="button" data-uk-toggle="target: #popupQuestion">Есть вопросы по модели?</button>
+        <button class="catalog__btn uk-margin-bottom uk-visible@l" type="button"
+          data-uk-toggle="target: #popupQuestion">Есть вопросы по модели?</button>
 
         <div class="filter uk-margin-large-bottom@l">
 
@@ -93,35 +94,35 @@
                 <ul class="filter__checkbox">
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f1" name="f1" checked="">
-                    <label for="f1">Mi</label>
+                    <label for="f1">iPhone Xs <span>(9)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f2" name="f2">
-                    <label for="f2">Redmi</label>
+                    <label for="f2">iPhone Xs Max <span>(19)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f3" name="f3">
-                    <label for="f3">Note</label>
+                    <label for="f3">iPhone Xr <span>(36)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f4" name="f4">
-                    <label for="f4">Pocophone</label>
+                    <label for="f4">iPhone X <span>(14)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f5" name="f5">
-                    <label for="f5">Mi MIX</label>
+                    <label for="f5">iPhone 8 <span>(10)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f6" name="f6">
-                    <label for="f6">MI MAX</label>
+                    <label for="f6">iPhone 8 <span>(10)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f7" name="f7">
-                    <label for="f7">Go</label>
+                    <label for="f7">iPhone 8 <span>(10)</span></label>
                   </li>
                   <li>
                     <input class="uk-hidden" type="checkbox" id="f8" name="f8">
-                    <label for="f8">SHARK</label>
+                    <label for="f8">iPhone 8 <span>(10)</span></label>
                   </li>
                 </ul>
                 <button class="filter__btn-see-all uk-margin-top" type="button"
