--- a/src/refferal.html
+++ b/src/refferal.html
@@ -39,7 +39,7 @@
                 <use xlink:href="img/symbol/sprite.svg#feature-cash-icon" />
               </svg>
             </div>
-            <p class="uk-margin-small-bottom"><b>Поделитесь ссылкой</b></p>
+            <p class="uk-margin-small-bottom">Поделитесь ссылкой</p>
             <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Пригласите друзей совершить покупку на iStore2
               по уникальной ссылке.</p>
           </li>
@@ -50,7 +50,7 @@
                 <use xlink:href="img/symbol/sprite.svg#feature-card-icon" />
               </svg>
             </div>
-            <p class="uk-margin-small-bottom"><b>Подарите&nbsp;5000&nbsp;&#8381;</b></p>
+            <p class="uk-margin-small-bottom">Подарите&nbsp;5000&nbsp;&#8381;</p>
             <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Зарегистрировавшись на iStore 2 по вашей
               ссылке, друзья получат кешбек на покупку устройств.</p>
           </li>
@@ -60,7 +60,7 @@
                 <use xlink:href="img/symbol/sprite.svg#feature-cashless-icon" />
               </svg>
             </div>
-            <p class="uk-margin-small-bottom"><b>Получите&nbsp;2500&nbsp;&#8381;</b></p>
+            <p class="uk-margin-small-bottom">Получите&nbsp;2500&nbsp;&#8381;</p>
             <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Когда ваш друг впервые совершит покупку, вы
               получите до 2500&nbsp;&#8381; на свой счет.</p>
           </li>
@@ -81,7 +81,10 @@
       <div class="refferal__footer">
         <p class="title title--small uk-margin-medium-bottom">Зарегистрируйтесь чтобы начать получать <br>кеш-бэк и
           зарабатывать на&nbsp;приглашениях</p>
-        <button class="btn" type="button">Регистрация </button>
+        <div class="uk-flex uk-flex-middle uk-flex-center uk-flex-column@s uk-margin-auto uk-width-1-2">
+          <button class="btn uk-margin-bottom@s" type="button">Вход</button>
+          <button class="btn" type="button">Регистрация</button>
+        </div>
       </div>
 
     </div>
