--- a/src/return.html
+++ b/src/return.html
@@ -11,7 +11,7 @@
         </ul>
 
         <h1 class="title title--medium uk-margin-bottom">Доставка и возвраты</h1>
-        <p class="uk-margin-medium-bottom">Смотреите способы доставки и условия возврата в вашем городе</p>
+        <p class="return__text uk-margin-medium-bottom">Смотрите способы доставки и условия возврата в вашем городе</p>
 
         <ul class="return__tabs uk-subnav uk-subnav-pill" uk-switcher>
           <li><a href="#">Доставка</a></li>
@@ -20,8 +20,8 @@
 
         <ul class="return__content uk-switcher uk-text-left">
           <li>
-            <div class="uk-flex uk-flex-center uk-flex-middle uk-flex-wrap uk-margin-bottom">
-              <label class="uk-margin-right">Сортировать</label>
+            <div class="return__sort uk-flex uk-flex-center uk-flex-middle uk-flex-wrap uk-margin-bottom">
+              <label class="uk-margin-right">Ваш город</label>
               <select>
                 <option data-display="Санкт-Петербург">Санкт-Петербург</option>
                 <option value="1">Москва</option>
@@ -40,8 +40,8 @@
                 </div>
                 <div class="uk-flex uk-flex-column uk-padding-small-top@l">
                   <span class="return__subtitle uk-margin-small-bottom">Наложенный платеж</span>
-                  <span class="return__text-gray">Ожидаемая датат доставки:</span>
-                  <span class="uk-margin-bottom@s">Вторник, 15 октября 2019</span>
+                  <span class="return__text-gray">Ожидаемая дата доставки:</span>
+                  <span class="return__date uk-margin-bottom@s">Вторник, 15 октября 2019</span>
                 </div>
                 <div class="uk-flex uk-flex-column uk-flex-end@l uk-text-right@l position-right@l">
                   <span class="return__text-green uk-margin-small-bottom">Бесплатно</span>
@@ -65,9 +65,9 @@
                   </div>
                 </div>
                 <div class="uk-flex uk-flex-column uk-padding-small-top@l">
-                  <span class="return__subtitle uk-margin-small-bottom">Доставка компанией CDEK</span>
-                  <span class="return__text-gray">Ожидаемая датат доставки:</span>
-                  <span class="uk-margin-bottom@s">Среда, 6 октября 2019</span>
+                  <span class="return__subtitle uk-margin-small-bottom">Доставка компанией СДЭК</span>
+                  <span class="return__text-gray">Ожидаемая дата доставки:</span>
+                  <span class="return__date uk-margin-bottom@s">Среда, 6 октября 2019</span>
                 </div>
                 <div class="uk-flex uk-flex-column uk-flex-end@l uk-text-right@l position-right@l">
                   <span class="return__text-green uk-margin-small-bottom">Бесплатно</span>
@@ -95,7 +95,7 @@
                     <use xlink:href="img/symbol/sprite.svg#feature-cash-icon" />
                   </svg>
                 </div>
-                <p class="uk-margin-small-bottom"><b>Оплата наличными</b></p>
+                <p class="uk-margin-small-bottom">Оплата наличными</p>
                 <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Вы можете оплатить товар курьеру при
                   доставке заказа</p>
               </li>
@@ -106,18 +106,19 @@
                     <use xlink:href="img/symbol/sprite.svg#feature-card-icon" />
                   </svg>
                 </div>
-                <p class="uk-margin-small-bottom"><b>Банковской картой</b></p>
+                <p class="uk-margin-small-bottom">Банковской картой</p>
                 <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Переводом онлайн без комиссии при
                   получении
                   заказа</p>
               </li>
-              <li class="feature--pink uk-flex uk-flex-column uk-flex-middle uk-margin-medium-bottom@s uk-padding-medium-bottom@s">
+              <li
+                class="feature--pink uk-flex uk-flex-column uk-flex-middle uk-margin-medium-bottom@s uk-padding-medium-bottom@s">
                 <div class="uk-margin-bottom">
                   <svg width="48" height="48">
                     <use xlink:href="img/symbol/sprite.svg#feature-cashless-icon" />
                   </svg>
                 </div>
-                <p class="uk-margin-small-bottom"><b>Безналичный рассчет</b></p>
+                <p class="uk-margin-small-bottom">Безналичный расчет</p>
                 <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Деньги списываются с расчетного счета
                   предпринимателя.</p>
               </li>
@@ -127,7 +128,7 @@
                     <use xlink:href="img/symbol/sprite.svg#feature-credit-icon" />
                   </svg>
                 </div>
-                <p class="uk-margin-small-bottom"><b>В кредит</b></p>
+                <p class="uk-margin-small-bottom">В кредит</p>
                 <p class="uk-padding-medium-right@l uk-padding-medium-left@l">Деньги списываются с расчетного счета
                   предпринимателя.</p>
               </li>
@@ -147,8 +148,8 @@
                 </div>
                 <div class="uk-flex uk-flex-column uk-padding-small-top@l">
                   <span class="return__subtitle uk-margin-small-bottom">Местное почтовое отделение</span>
-                  <span class="return__text-gray">Ожидаемая датат доставки:</span>
-                  <span class="uk-margin-bottom@s">Среда, 6 октября 2019</span>
+                  <span class="return__text-gray">Ожидаемая дата доставки:</span>
+                  <span class="return__date uk-margin-bottom@s">Среда, 6 октября 2019</span>
                 </div>
                 <div class="uk-flex uk-flex-column uk-flex-end@l uk-text-right@l position-right@l">
                   <span class="return__text-gray">Оплату почтового отправлеия <br>при обмене или возврате <br>производит
