--- a/src/account-orders.html
+++ b/src/account-orders.html
@@ -7,15 +7,15 @@
 
 			<div class="uk-width-expand@l">
 				<h1 class="title title--medium uk-margin-bottom@s uk-visible@l">Здравствуйте, Василий!</h1>
-				<ul class="account__list uk-flex uk-flex-between@l">
+				<ul class="account__list uk-flex">
 					<li>
 						<a href="account-main.html">Главная</a>
 					</li>
-					<li>
+				<!-- 	<li>
 						<a href="account-cart.html">Мои товары</a>
-					</li>
+					</li> -->
 					<li class="active">
-						<a href="">Заказы</a>
+						<a href="">Мои заказы</a>
 					</li>
 					<li>
 						<a href="account-cashback.html">Кешбэк</a>
@@ -23,13 +23,13 @@
 					<li>
 						<a href="account-reviews.html">Отзывы <span class="uk-visible@l">и обратная связь</span></a>
 					</li>
-					<li class="uk-visible@l">
+					<!-- <li class="uk-visible@l">
 						<a class="account__logout" href="#">Выйти
 							<svg width="20" height="20" fill="#FF548C">
 								<use xlink:href="img/symbol/sprite.svg#log-out" />
 							</svg>
 						</a>
-					</li>
+					</li> -->
 				</ul>
 
 				<div class="account__content">
