feature: adds new elements

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -286,6 +286,30 @@
               </li>
             </ul>
 
+            <ul class="checkout__list-select uk-flex uk-flex-column@s uk-child-width-1-3@l uk-margin-bottom">
+              <li
+                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                <div>
+                  <img src="img/pic/logo/cdek-logo.jpg" width="112" height="48" alt="">
+                </div>
+                <span>CDEK</span>
+              </li>
+              <li
+                class="uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                <div>
+                  <img src="img/pic/logo/pochta-logo.jpg" width="101" height="48" alt="">
+                </div>
+                <span>Почта России EMS</span>
+              </li>
+              <li
+                class="active uk-flex uk-flex-column@l uk-flex-center@s uk-flex-middle@s uk-child-width-1-2@s uk-child-width-1-1@l">
+                <div>
+                  <img src="img/pic/ico/courier.svg" width="40" height="40" alt="">
+                </div>
+                <span>Курьером по СПб</span>
+              </li>
+            </ul>
+
             <p>Точку выдачи с товаром в наличии уточняйте <br>у менеджера</p>
 
             <div>
@@ -299,28 +323,10 @@
                 <input type="tel" placeholder="+7">
               </div>
 
-              <!-- <div class="field field--account uk-margin-bottom">
-                <label for="" class="field__title">Email</label>
-                <input type="email">
-              </div> -->
-
               <div class="field field--account uk-margin-bottom">
                 <label for="" class="field__title">Город</label>
                 <input type="text">
               </div>
-
-              <!-- <div
-                class="uk-flex uk-flex-middle@l uk-flex-column@s checkout__delivery-field-wrap uk-flex-between uk-margin-bottom">
-                <div class="field field--account uk-margin-bottom@s">
-                  <label for="" class="field__title">Улица</label>
-                  <input type="text">
-                </div>
-
-                <div class="field--account">
-                  <label for="" class="field__title">Дом / квартира</label>
-                  <input type="text">
-                </div>
-              </div> -->
 
               <div class="field field--account uk-margin-bottom">
                 <label for="" class="field__title">Адрес доставки</label>
