--- a/src/product.html
+++ b/src/product.html
@@ -123,7 +123,7 @@
             </div>
 
             <div class="product__container">
-              <button class="btn product__container-btn--green" type="btn">
+              <button class="btn product__container-btn--green" type="btn" data-uk-toggle="target: #popupCartAdd">
                 <span>
                   <svg width="24" height="24" fill="#ffffff">
                     <use xlink:href="img/symbol/sprite.svg#cart-icon" />
