--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <!-- Product-cards -->
-  <div class="uk-container bg-full-width uk-padding-large-top@l uk-padding-large-top@s">
+  <div class="uk-container bg-full-width uk-padding-large-top@l uk-padding-top@s">
     <h2 class="title title--small uk-margin-small-bottom">Продажа Apple iPhone с доставкой по всей територии РФ</h2>
     <p class="uk-margin-bottom">Популярные модели по лучшим ценам</p>
     <ul class="uk-grid-small uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m uk-child-width-1-4@l" uk-grid>
